// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createReactor should query 1`] = `
<div>
  Authenticating...
</div>
`;

exports[`createReactor should query 2`] = `
<div>
  Fetching canister...
</div>
`;

exports[`createReactor should query 3`] = `
<div>
  Fetching canister...
</div>
`;
